lox-tests/tests/inheritance/inherit_from_number.stderr
ERROR: Superclass must be a valid class
 --> 2:13
  |
2 | class Foo < Number {} // expect runtime error: Superclass must be a class.
  |             ^----^
